--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 wasm-bindgen = "0.2.63"
-rxrust = { path = "rxrust" }
+rxrust = { path = "rxrust", features = ["wasm-scheduler"] }
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
