--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,9 @@ crate-type = ["cdylib", "rlib"]
 wasm-bindgen = "0.2.63"
 rxrust = "1.0.0-alpha.3"
 
+[dependencies.web-sys]
+version = "0.3.56"
+features = ["console"]
+
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
