--- a/www/package.json
+++ b/www/package.json
@@ -27,13 +27,15 @@
   },
   "homepage": "https://github.com/rustwasm/create-wasm-app#readme",
   "dependencies": {
-    "rxrust-with-wasm": "file:../pkg"
+    "rxrust-with-wasm": "file:../pkg",
+    "ts-node": "^10.7.0"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^10.2.4",
     "hello-wasm-pack": "^0.1.0",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "copy-webpack-plugin": "^5.0.0"
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
